2013-04-09  Ingo Renner  <ingo@typo3.org>

	* Fixed an issue of markup not being escaped in the Index Inspector

2013-04-09  Tomita Militaru  <militarutomita@gmail.com>

	* Added feature #45881: Match against a pattern in face requirements

2013-04-08  Jochen Rieger  <j.rieger@connecta.ag>

	* Fixed bug #45706: GarbageCollector wrongly removes record with future starttime from indexqueue

2013-04-05  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #46180: Overrule language labels from TS
	* Fixed bug #41521: pages-TCA not fully loaded in SOLR_RELATION
	* Fixed bug #46966: Autocomplete not working under TYPO3 6.1
	* Fixed bug #44080: Use config.absRefPrefix for loading JavaScripts

2013-04-02  Olivier Dobberkau <olivier.dobberkau@dkd.de>

	* Fix a wrong URL in the multi solr install script

2013-02-16  Kai Vogel <kai.vogel@speedprogs.de>

	* Fixed issue #45440: Broken facet options when with queryGroup and "}" in query

2013-02-16  Lienhart Woitok <lienhart.woitok@netlogix.de>

	* Added feature #45195: Option to remove empty values from SOLR_RELATION
	* Added feature #45196: Option to remove duplicate values from SOLR_RELATION
	* Added feature #45197: Option to remove duplicate values from SOLR_MULTIVALUE
	* Added feature #45198: Specify foreignLabelField in SOLR_RELATION for deeper relations
	* Added feature #45199: Allow to post process the plugin output with stdWrap
	* Added feature #45200: Make facet count and name available in rendering instructions
	* Fixed issue #45201: Result highlighting only works for content
	* Fixed issue #45202: Workspace version swap does not take additionalWhereClause into account
	* Fixed issue #45203: Remove empty tx_solr[q] parameter from URLs
	* Added feature #45204: Allow selectingSelectedFacetOptionRemovesFilter and singleOptionMode to work together
	* Added feature #45206: Did you mean should only display suggestions that actually yield results
	* Added feature #45207: Add timestamps to included javascript files